@@ -21,3 +21,4 @@ README
 README.pod
 t/ipc_srlock*
 *.tar.gz
+Module-Provision-*
