@@ -22,14 +22,18 @@
 ^MYMETA\.json$
 ^MYMETA\.yml$
 ^README\.md$
+^README\.mkdn$
 ^README\.textile$
-^SIGNATURE$
+#^SIGNATURE$
 ^Debian_CPANTS.txt$
 
 # Avoid Module::Build generated and utility files.
 \bBuild$
 \bBuild.bat$
 \b_build
+
+# Avoid Dist::Zilla config file
+\bdist.ini$
 
 # Avoid Devel::Cover generated files
 \bcover_db
