@@ -1,0 +1,97 @@
+; @(#)$Ident: dist.ini 2013-08-15 22:55 pjf ;
+
+name              = Module-Provision
+abstract          = Create Perl distributions with VCS and selectable toolchain
+author            = Peter Flanigan <pjfl@cpan.org>
+copyright_holder  = Peter Flanigan
+license           = Perl_5
+main_module       = lib/Module/Provision.pm
+
+[Prereqs]
+perl                  = 5.010001
+namespace::sweep      = 0.006
+Class::Null           = 2.101420
+Class::Usul           = v0.23.0
+CPAN::Uploader        = 0.103004
+Date::Format          = 2.24
+Dist::Zilla           = 4.300033
+Dist::Zilla::Plugin::ManifestInRoot        = v0.1.0
+Dist::Zilla::Plugin::MarkdownInRoot        = v0.1.0
+Dist::Zilla::Plugin::Meta::Dynamic::Config = 0.04
+Dist::Zilla::Plugin::ModuleBuild::Custom   = 4.16
+Dist::Zilla::Plugin::ReadmeAnyFromPod      = 0.120120
+Dist::Zilla::Plugin::Signature             = 1.100930
+Dist::Zilla::Plugin::VersionFromModule     = 0.08
+File::DataClass       = v0.23.0
+File::ShareDir        = 1.02
+File::Slurp           = 9999.13
+HTTP::Message         = 6.06
+LWP::Protocol::https  = 6.03
+LWP                   = 6.04
+Module::Install       = 1.06
+Module::Install::AutoLicense           = 0.08
+Module::Install::ReadmeFromPod         = 0.20
+Module::Install::ReadmeMarkdownFromPod = 0.03
+Module::Metadata      = 1.000011
+Moo                   = 1.003
+MooX::Options         = 3.83
+Perl::Version         = 1.011
+Pod::Eventual         = 0.093330
+Pod::Markdown         = 1.322
+Template              = 2.22
+Type::Tiny            = 0.012
+Unexpected            = v0.6.0
+
+[Prereqs / ConfigureRequires]
+version           = 0.88
+Module::Build     = 0.4004
+
+[Prereqs / BuildRequires]
+version           = 0.88
+File::DataClass   = v0.23.0
+Module::Build     = 0.4004
+
+[MarkdownInRoot::WithMetaLinks]
+filename          = README.md
+
+[Meta::Dynamic::Config]
+
+[MetaNoIndex]
+directory         = examples
+directory         = inc
+directory         = share
+directory         = t
+
+[MetaProvides::Package]
+inherit_version   = 0
+meta_noindex      = 1
+
+[MetaResources]
+license           = http://dev.perl.org/licenses/
+homepage          = https://metacpan.org/author/PJFL
+bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Module-Provision
+bugtracker.mailto = bug-Module-Provision@rt.cpan.org
+;repository.url   = git://github.com/pjfl/Module-Provision.git
+;repository.web   = http://github.com/pjfl/Module-Provision
+;repository.type  = git
+
+; So apparently order matters
+[ReadmeAnyFromPod]
+[Signature]
+[ShareDir]
+[GatherDir]
+[VersionFromModule]
+[ModuleBuild::Custom]
+[License]
+[MetaJSON]
+[MetaYAML]
+[ManifestInRoot]
+[ManifestSkip]
+
+; Local Variables:
+; mode: conf-windows
+; eval: (load-project-state "module-provision")
+; tab-title: Provision
+; tab-width: 3
+; End:
+; vim: expandtab shiftwidth=3:
